--- a/views/presupuestos.html
+++ b/views/presupuestos.html
@@ -81,27 +81,25 @@
             <!--label que contiene un input de tipo texto-->
             <label>
                 Nombre: <input type="text" id="name_id" name="nombre" placeholder="Introduzca su nombre" style="width:255px;">
-            </label> <br><br>
+            </label> 
             <!--label que contiene un input de tipo email-->
             <label>
                 Correo el&eacute;ctronico: <input type="email" id="email_id" name="email" placeholder="introduzca su correo el&eacute;ctronico" style="width:181px;">
-            </label> <br><br>
+            </label> 
             <!--label que contiene input de tipo telefono-->
             <label >
                 N&uacute;mero de tel&eacute;fono: <input type="tel" id="tel_id" name="telefono" placeholder="introduzca su n&uacute;mero de tel&eacute;fono" style="width: 172px;">
-            </label><br><br>
+            </label>
             <!--label que contiene im textarea-->
             <label>
                 <textarea id="masinfo_id" name="masinfo" rows="5" cols="44" placeholder="solicite m&aacute;s informaci&oacute;n"></textarea>
-            </label> <br><br>
+            </label> 
             <!-- input checkbox de la politica de privacidad -->
             <input type="checkbox" id="politica_checkbox_id">
             <!--label del checkbox a la derecha del checkbox-->
             <label for="politica_checkbox_id">
                 He le&iacute;do y acepto la <a href="politica_de_privacidad.html" target="_blank">p&oacute;litica de privacidad</a>
             </label>
-        <!--separacion del boton enviar-->
-        <br><br>
         <!-- boton de enviar que llama a la funcion validarFormulario() -->
         <button type="submit">Enviar</button>
         </form>
