--- a/views/contacto.html
+++ b/views/contacto.html
@@ -77,7 +77,7 @@
                 <td >
                     <!--la imagen se encuentra dentro de un enlace a bing maps-->
                     <a href="https://www.bing.com/maps?q=123+Sunset+Lane%2C+Suite+7+Honolulu%2C+HI+96815&FORM=HDRSC6&cp=21.278298%7E-157.823307&lvl=14.6">
-                        <img src="../images/honolulu_map_01.png" alt="map image loading error" style="width: 100%; border-radius: 10px;">
+                        <img src="../images/honolulu_map_01.png" alt="map image loading error" id="map_img_id">
                     </a>
                 </td>
                 <td>
