--- a/views/productos.html
+++ b/views/productos.html
@@ -360,7 +360,7 @@
                     <p class="p_price_class">5,99 euros</p>
                 </td>
                 <td>
-                    <p class="p_description_class">Microcontrolador de doble n&uacute;cleo con Wi-Fi y Bluetooth integrados, perfecto para proyectos avanzados de IoT e inteligencia artificial.</p>
+                    <p class="p_description_class">Doble n&uacute;cleo, con Wi-Fi y Bluetooth integrados, perfecto para proyectos avanzados de IoT e inteligencia artificial.</p>
                     <p class="p_price_class">8,99 euros</p>
                 </td>
                 <td>
