--- a/css/style.css
+++ b/css/style.css
@@ -451,7 +451,7 @@ nav p:hover{
     font-family: 'Arial Narrow Bold', sans-serif;
     padding-left: 35px;
 }
-/* elementos alistados en la lista de la tabla de la seccion 1
+/* elementos alistados en las listas de los divs de la seccion 1
     familia serif
     tamanyo grande
     padding derecha para separar de la imagen
